Fixed resume button styling, window dragging z-index behaviour

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -77,6 +77,23 @@
     padding: 0; /* Removes default padding */
   }
 
+  /* Button styles */
+  .resume-button {
+    background-color: rgba(116, 159, 144, 0.202);
+    padding: 10px 20px;
+    border: 1px solid white;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    display: block;
+    margin: 0 auto; 
+    color: white;
+  }
+
+  .resume-button:hover {
+    background-color: rgba(173, 238, 215, 0.202);
+  }
+
 
   @media (max-width: 1200px) {
     .icon {
